@@ -7,6 +7,7 @@ version 0.84.03
 	K-1 bufmask testing
 	--dangerous hack
 	GUI: Status hexdump
+	New status field: auto_bracket_picture_counter (thx jmozmoz)
 
 version 0.84.02 ( 2016-10-31 )
 	Android code cleanup
